--- a/securing-web/pom.xml
+++ b/securing-web/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>securing-web</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
 	<name>securing-web</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
